0.4.16/_sources/gallery/show_points_based_on_feature.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/show_points_based_on_feature.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_show_points_based_on_feature.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_show_points_based_on_feature.py:


Show points based on feature
============================

.. GENERATED FROM PYTHON SOURCE LINES 6-38



.. image-sg:: /gallery/images/sphx_glr_show_points_based_on_feature_001.png
   :alt: show points based on feature
   :srcset: /gallery/images/sphx_glr_show_points_based_on_feature_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    #!/usr/bin/env python3

    import napari
    import numpy as np
    from magicgui import magicgui


    # create points with a randomized "confidence" feature
    points = np.random.rand(100, 3) * 100
    colors = np.random.rand(100, 3)
    confidence = np.random.rand(100)

    viewer = napari.Viewer(ndisplay=3)
    points = viewer.add_points(
            points, face_color=colors, features={'confidence': confidence}
            )


    # create a simple widget with magicgui which provides a slider that controls the visilibility
    # of individual points based on their "confidence" value
    @magicgui(
        auto_call=True,
        threshold={'widget_type': 'FloatSlider', 'min': 0, 'max': 1}
    )
    def confidence_slider(layer: napari.layers.Points, threshold=0.5):
        layer.shown = layer.features['confidence'] > threshold


    viewer.window.add_dock_widget(confidence_slider)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_show_points_based_on_feature.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: show_points_based_on_feature.py <show_points_based_on_feature.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: show_points_based_on_feature.ipynb <show_points_based_on_feature.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
