0.8.0/_sources/gallery/show_points_based_on_feature.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/show_points_based_on_feature.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_show_points_based_on_feature.py:


Show points based on feature
============================

.. tags:: visualization-advanced

.. GENERATED FROM PYTHON SOURCE LINES 7-38



.. image-sg:: /gallery/images/sphx_glr_show_points_based_on_feature_001.png
   :alt: show points based on feature
   :srcset: /gallery/images/sphx_glr_show_points_based_on_feature_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    import numpy as np
    from magicgui import magicgui

    import napari

    # create points with a randomized "confidence" feature
    points = np.random.rand(100, 3) * 100
    colors = np.random.rand(100, 3)
    confidence = np.random.rand(100)

    viewer = napari.Viewer(ndisplay=3)
    points = viewer.add_points(
            points, face_color=colors, features={'confidence': confidence}
            )


    # create a simple widget with magicgui which provides a slider that controls the visibility
    # of individual points based on their "confidence" value
    @magicgui(
        auto_call=True,
        threshold={'widget_type': 'FloatSlider', 'min': 0, 'max': 1}
    )
    def confidence_slider(layer: napari.layers.Points, threshold=0.5):
        layer.shown = layer.features['confidence'] > threshold


    viewer.window.add_dock_widget(confidence_slider)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_show_points_based_on_feature.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: show_points_based_on_feature.ipynb <show_points_based_on_feature.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: show_points_based_on_feature.py <show_points_based_on_feature.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: show_points_based_on_feature.zip <show_points_based_on_feature.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
